# MemristorSim-3D

./: .gitignore  CMakeLists.txt  README.md  crossbar_pytorch.py  mnist_cnn_demo.py  run.bat  test_bindings.py  test_pytorch.py  test_write_verify.py
shaders/: basic.vert  filament.frag  filament.vert  glass.frag  grid.frag  grid.vert
src/: main.cpp
src/bindings/: pybindings.cpp
src/gui/: Gui.cpp  Gui.h
src/physics/: Crossbar.h  Memristor.cpp  Memristor.h  Optimizer.h
src/render/: Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/utils/: ConfigManager.h  Waveform.cpp  Waveform.h
